// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Page rendering 1`] = `
<DocumentFragment>
  <span
    data-component="Metadata"
    data-props="{
  \\"description\\": \\"Test description\\"
}"
  />
  <noscript />
  <span
    data-component="withI18nextTranslation(App)"
    data-props="{
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"name\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"name\\": \\"Other\\"
    }
  ],
  \\"syntax\\": \\"testJs\\",
  \\"expr\\": \\"\\",
  \\"permalinkUrl\\": null
}"
  />
</DocumentFragment>
`;

exports[`Index Page rendering with an expression on the URL 1`] = `
<DocumentFragment>
  <span
    data-component="Metadata"
    data-props="{
  \\"description\\": \\"Test description\\"
}"
  />
  <noscript />
  <span
    data-component="withI18nextTranslation(App)"
    data-props="{
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"name\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"name\\": \\"Other\\"
    }
  ],
  \\"syntax\\": \\"test\\",
  \\"expr\\": \\"testing\\",
  \\"permalinkUrl\\": \\"http://example.com\\"
}"
  />
</DocumentFragment>
`;
